--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
+    "@mui/styled-engine-sc": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-circle-modal": "0.0.2",
+    "react-date-picker": "^8.3.2",
+    "react-datepicker": "^4.2.1",
+    "react-datetime-picker": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "reactjs-localstorage": "^1.0.1",
+    "redux": "^4.1.1",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
