--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.2.1",
     "react-datetime-picker": "^3.4.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactjs-localstorage": "^1.0.1",
     "redux": "^4.1.1",
